@@ -97,6 +97,7 @@ version ? (????-??-??):
   - additional tariff types to select (phone, tv) [chilan]
   - uke report support for service types [chilan]
   - netdevmap: show link properties in tooltip [chilan]
+  - netdevmap: link weight depends on link speed [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
